# simple_chart_svr

./: Cargo.toml
src/: main.rs
