[package]
name = "simple_chart_svr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#std = "0.2.1"
tokio = { version = "1.14.0", features = ["full"] }
structopt = { version = "0.3", default-features = false }